Extended market view to display 1d/7d % change + 24h supply
